--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "concurrently": "^6.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
+    "prismic-dom": "^2.2.6",
     "pug": "^3.0.2"
   }
 }
