--- a/package.json
+++ b/package.json
@@ -42,9 +42,13 @@
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "prismic-dom": "^2.2.6",
     "pug": "^3.0.2"
