--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-optipng": "^8.0.0",
+    "include-media": "^1.4.10",
     "mini-css-extract-plugin": "^1.6.2",
     "postcss-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
