--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "author": "Giulia Soccolini",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+    "@babel/plugin-transform-spread": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^6.4.0",
