--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "include-media": "^1.4.10",
     "mini-css-extract-plugin": "^1.6.2",
     "postcss-loader": "^6.2.0",
+    "prefix": "^1.0.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.43.3",
     "sass-loader": "^12.2.0",
