--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "backend:build": "node app.js",
-    "backend:development": "nodemon app.js",
+    "backend:development": "node app.js",
     "frontend:build": "webpack --progress --config webpack.config.build.js",
     "frontend:development": "webpack serve --progress --config webpack.config.development.js",
     "start": "concurrently --kill-others \"npm run backend:development\" \"npm run frontend:development\""
@@ -38,6 +38,7 @@
     "imagemin-optipng": "^8.0.0",
     "include-media": "^1.4.10",
     "mini-css-extract-plugin": "^1.6.2",
+    "normalize-wheel": "^1.0.1",
     "postcss-loader": "^6.2.0",
     "prefix": "^1.0.0",
     "raw-loader": "^4.0.2",
