--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-transform-spread": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
@@ -39,6 +38,7 @@
     "include-media": "^1.4.10",
     "mini-css-extract-plugin": "^1.6.2",
     "normalize-wheel": "^1.0.1",
+    "ogl": "0.0.76",
     "postcss-loader": "^6.2.0",
     "prefix": "^1.0.0",
     "raw-loader": "^4.0.2",
