--- a/package.json
+++ b/package.json
@@ -3,64 +3,61 @@
   "version": "1.0.0",
   "scripts": {
     "backend:build": "node app.js",
-    "backend:development": "node app.js",
+    "backend:development": "nodemon app.js",
     "frontend:build": "webpack --progress --config webpack.config.build.js",
     "frontend:development": "webpack serve --progress --config webpack.config.development.js",
     "start": "concurrently --kill-others \"npm run backend:development\" \"npm run frontend:development\""
   },
-  "author": "Giulia Soccolini",
-  "license": "ISC",
+  "author": "Luis Henrique Bizarro",
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/plugin-transform-spread": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "babel-loader": "^7.1.5",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "clean-webpack-plugin": "^4.0.0",
+    "auto-bind": "^4.0.0",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "concurrently": "^6.3.0",
     "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^6.4.0",
-    "eslint": "^8.1.0",
-    "eslint-config-standard": "^16.0.3",
+    "css-loader": "^5.2.2",
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "file-loader": "^6.2.0",
     "glslify-loader": "^2.0.0",
-    "gsap": "^3.8.0",
+    "gsap": "^3.6.1",
     "image-minimizer-webpack-plugin": "^2.2.0",
-    "imagemin": "^8.0.1",
+    "imagemin": "^7.0.1",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-optipng": "^8.0.0",
-    "include-media": "^1.4.10",
-    "mini-css-extract-plugin": "^1.6.2",
+    "imagemin-svgo": "^9.0.0",
+    "include-media": "^1.4.9",
+    "mini-css-extract-plugin": "^1.5.0",
     "normalize-wheel": "^1.0.1",
-    "ogl": "0.0.76",
-    "postcss-loader": "^6.2.0",
+    "ogl": "^0.0.73",
+    "postcss-loader": "^5.2.0",
     "prefix": "^1.0.0",
     "raw-loader": "^4.0.2",
-    "sass": "^1.43.3",
-    "sass-loader": "^12.2.0",
-    "terser-webpack-plugin": "^5.2.4",
-    "webpack": "^5.59.1",
-    "webpack-cli": "^4.9.1",
+    "sass": "^1.32.10",
+    "sass-loader": "^11.0.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@prismicio/client": "^5.1.0",
+    "@babel/core": "^7.16.0",
+    "@prismicio/client": "^4.0.0",
     "body-parser": "^1.19.0",
-    "concurrently": "^6.3.0",
-    "dotenv": "^10.0.0",
+    "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.14",
-    "prismic-dom": "^2.2.6",
-    "pug": "^3.0.2"
+    "nodemon": "^2.0.7",
+    "prismic-dom": "^2.2.5",
+    "pug": "^3.0.2",
+    "ua-parser-js": "^0.7.28"
   }
 }
