--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@prismicio/client": "^4.0.0",
+    "@types/common-prefix": "^1.1.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
